tests/unit_tests/sema/binder_using_unresolved_01.cc
// RUN: %cxx -verify %s

struct Base {};

struct Derived : Base {
  using Base::missing;  // expected-error {{using declaration refers to unresolved name 'missing'}}
};
